# aumos-model-registry

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_model_registry/: __init__.py  main.py  settings.py
src/aumos_model_registry/adapters/: __init__.py  ab_test_integration.py  cost_attribution.py  deployment_rollback.py  kafka.py  lineage_graph.py  minio_client.py  ml_bom_generator.py  mlflow_client.py  model_card_generator.py  repositories.py  semantic_search.py
src/aumos_model_registry/api/: __init__.py  decommission_routes.py  decommission_schemas.py  provenance_routes.py  router.py  schemas.py
src/aumos_model_registry/core/: __init__.py  cost_engine.py  interfaces.py  ml_bom.py  models.py  services.py
src/aumos_model_registry/core/services/: __init__.py  provenance_chain_service.py
src/aumos_model_registry/decommission/: __init__.py  signal_collector.py  workflow_manager.py
tests/: __init__.py  conftest.py  test_decommission_signal_collector.py  test_decommission_workflow_manager.py  test_provenance_chain.py
